# project1

./: .gitattributes  .gitignore  README.md  app.py  check_model.py  conftest.py  get_work.bat  pyproject.toml  repo_tree.txt  requirements.txt  run.py  run_one.bat  run_one.ps1  run_one.sh  setup_env.bat  setup_env.sh  项目目录与逻辑说明.txt
configs/: default.yaml  roi_laneaf_example.yaml
data/outputs/: .gitkeep  a.csv  bdv.csv  ec.csv
data/rois/: ambulance.json  broken_down_vehicle.json  ec.json  exceptional_case.json
dev/: set_env.ps1  set_env.sh
lane_detection/: __init__.py
lane_detection/laneaf/: __init__.py  affinity.py  infer.py  model.py
lane_detection/laneatt/: __init__.py  detector.py  laneatt_model.py
modules/: lp_pipeline.py
project/: README.md  __init__.py  requirements.txt  run.py  run_one.bat  run_one.ps1
project/configs/: default.yaml
project/tests/: test_events.py  test_geometry.py  test_roi.py
project/tools/: __init__.py  eval_auto_cv.py  roi_auto_cv.py  roi_make.py  roi_preview.py
reports/: auto_cv_tune.csv  commit_notes.md
tests/: test_events.py  test_geometry.py  test_laneatt_roi.py  test_plate_ocr.py  test_roi.py
tools/: batch_auto_roi_test.py  catupe.py  check_imports.py  crop_fine.py  eval_auto_cv.py  mine_hard_examples.py  ocr_fill_csv.py  ocr_plates.py  random_capture.py  roi_annotator.py  roi_auto_cv.py  roi_auto_line.py  roi_editor.py  roi_make.py  roi_preview.py  roi_yolo_gen.py  run_plate_ocr.py  test_laneaf_roi.py  test_laneatt_detect.py  test_laneatt_roi.py  train.py
weights/: lane_seg_v1.pt  lane_seg_v2.pt  model_0015.pt
(+62 files in other folders)
